--- a/WeatherConsole/pom.xml
+++ b/WeatherConsole/pom.xml
@@ -30,6 +30,13 @@
             <version>2.15.3</version>
             <type>jar</type>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.3</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
